Fix counter problem

--- a/src/style.css
+++ b/src/style.css
@@ -194,3 +194,9 @@
     border: none;
     transition: all 0.5s;
 }
+
+.counter-cont{
+    text-align: center;
+    margin: 25px 0;
+    font-size: 25px;
+}
