add style footer and popup

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 
-.container-meal {
+.container {
   overflow: hidden;
 }
 
@@ -68,7 +68,7 @@
   border-radius: 5px;
   margin: 100px auto;
   position: relative;
-  background-color: rgb(40, 63, 42);
+  background-color: rgba(218, 163, 114, 0.981);
 }
 
 .img-div {
@@ -82,6 +82,8 @@
   max-height: 400px;
   margin-top: 15px;
   border-radius: 10px;
+  box-shadow: 10px 5px 5px white;
+  margin-top: 2rem;
 }
 
 .food-title {
@@ -91,7 +93,7 @@
 
 .preparation-title {
   color: white;
-  margin-left: 7rem;
+  margin-left: 6rem;
   margin-bottom: 2rem;
 }
 
@@ -125,7 +127,7 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
   overflow: auto;
-  background-color: rgba(241, 241, 241, 1);
+  background-color: white;
   border-radius: 5px;
   width: 300px;
   height: 100px;
@@ -136,7 +138,7 @@
   display: flex;
   flex-direction: column;
   width: 45%;
-  margin-left: 11.5rem;
+  margin-left: 11rem;
 }
 
 .prep-div {
@@ -151,7 +153,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 100px;
+  max-height: 110px;
   width: 500px;
   overflow: auto;
   background-color: rgba(241, 241, 241, 1);
@@ -169,7 +171,7 @@
 }
 
 .comments:nth-child(odd) {
-  background-color: lightgrey;
+  background-color: rgba(242, 216, 192, 0.981);
 }
 
 .comment-input {
@@ -182,19 +184,34 @@
 
 .submit-btn {
   width: 25%;
-  font-weight: bold;
   margin: 15px auto 20px;
+  font-weight: bold;
   border-radius: 5px;
-  background-color: black;
   color: white;
   text-decoration: none;
   padding: 10px;
   border: none;
-  transition: all 0.5s;
+  background-color: black;
+}
+
+.submit-btn:hover {
+  color:rgba(238, 227, 216, 0.749);
+  background-color: rgb(48, 48, 48);
 }
 
 .counter-cont {
   text-align: center;
   margin: 25px 0;
   font-size: 25px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background:#edd1a7;
+  color:black;
+  text-align:center; 
+  font-weight:bold;
+  line-height:20px;
 }
