--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@
   max-height: 61vh;
   display: flex;
   flex-direction: column;
-  border: 4px solid #F37A5D;
+  border: 4px solid #f37a5d;
   border-radius: 5%;
   padding: 10px;
 }
@@ -58,7 +58,7 @@
   margin-bottom: 10px;
 }
 
-.comment-btn{
+.comment-btn {
   background-color: #fff;
   font-weight: bold;
   width: 80%;
@@ -67,19 +67,18 @@
   border-radius: 5px;
 }
 
-.comment-btn:hover{
+.comment-btn:hover {
   cursor: pointer;
-  box-shadow: 1px 1px 14px -2px rgba(243,122,93,1);
--webkit-box-shadow: 1px 1px 14px -2px rgba(243,122,93,1);
--moz-box-shadow: 1px 1px 14px -2px rgba(243,122,93,1);
-
+  box-shadow: 1px 1px 14px -2px rgba(243, 122, 93, 1);
+  -webkit-box-shadow: 1px 1px 14px -2px rgba(243, 122, 93, 1);
+  -moz-box-shadow: 1px 1px 14px -2px rgba(243, 122, 93, 1);
 }
 
-.heart:hover{
+.heart:hover {
   cursor: pointer;
 }
 
-.btns{
+.btns {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -107,7 +106,7 @@
   width: 620px;
   margin: 100px auto;
   position: relative;
-  background-color: #F37A5D;
+  background-color: #f37a5d;
   border-radius: 5% 0 0 5%;
 }
 
@@ -120,7 +119,6 @@
 .modal-img {
   max-width: 400px;
   max-height: 400px;
-  margin-top: 15px;
   border-radius: 10px;
   box-shadow: 10px 5px 5px white;
   margin-top: 2rem;
@@ -235,7 +233,7 @@
 }
 
 .submit-btn:hover {
-  color:rgba(238, 227, 216, 0.749);
+  color: rgba(238, 227, 216, 0.749);
   background-color: rgb(48, 48, 48);
 }
 
@@ -247,10 +245,10 @@
 
 footer {
   width: 100%;
-  background:#F37A5D;
-  text-align:center; 
-  font-weight:bold;
-  line-height:20px;
+  background: #f37a5d;
+  text-align: center;
+  font-weight: bold;
+  line-height: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -259,14 +257,14 @@ footer {
   margin-top: 20px;
 }
 
-footer > div{
+footer > div {
   display: flex;
   justify-content: center;
   gap: 20px;
   color: #fff;
 }
 
-header{
+header {
   width: 90%;
   margin: auto;
   height: 80px;
@@ -274,22 +272,22 @@ header{
   gap: 50px;
   justify-content: start;
   align-items: center;
-  border-bottom: 2px solid #F37A5D;
+  border-bottom: 2px solid #f37a5d;
   margin-bottom: 40px;
 }
 
-.logo-img{
+.logo-img {
   background: url(./food.svg) no-repeat center center;
   background-size: 100% 100%;
   width: 60px;
   height: 60px;
 }
 
-.logo{
+.logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #F37A5D;
+  color: #f37a5d;
   font-size: 25px;
   gap: 10px;
   text-decoration: none;
@@ -297,7 +295,7 @@ header{
   font-family: 'Comforter', cursive;
 }
 
-.home-counter-p{
+.home-counter-p {
   font-size: 20px;
   text-align: center;
 }
